c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/extra_credit/extern_label.c
// The extern specifier cannot be applied to labels

int main(void) {
    extern a:
    return 1;
}